--- a/app/build.gradle
+++ b/app/build.gradle
@@ -119,7 +119,8 @@ dependencies {
     //Lottie Animation
     implementation "com.airbnb.android:lottie-compose:5.0.1"
 
-
+    //GSON
+    implementation 'com.google.code.gson:gson:2.9.0'
 }
 
 
