Add meta-data tag in the Manifest's application tag

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,8 @@
 
         </activity>
 
-
+        <meta-data android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyAHU4Vg-tKcwraARGlnY3lieyHFs9uMzs4"/>
     </application>
 
 </manifest>
