--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,7 @@ android {
             excludes += '/META-INF/{AL2.0,LGPL2.1}'
         }
     }
+    namespace 'com.uxstate.countriespad'
 }
 
 dependencies {
