--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,7 +81,7 @@ dependencies {
 
 
     //Material 3
-    implementation 'androidx.compose.material3:material3:1.0.0-rc01'
+    implementation 'androidx.compose.material3:material3:1.1.0-alpha03'
 
     // Coil
     implementation "io.coil-kt:coil-compose:2.1.0"
