--- a/build.gradle
+++ b/build.gradle
@@ -1,20 +1,22 @@
 buildscript {
     ext {
-        compose_version = '1.1.1'
+        compose_version = '1.5.0'
     }
 
-    dependencies {
-        classpath "com.google.dagger:hilt-android-gradle-plugin:2.42"
-    }
+    /*dependencies {
+        classpath "com.google.dagger:hilt-android-gradle-plugin:2.44.2"
+    }*/
 
 }
 
 
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
-    id 'com.android.application' version '7.4.2' apply false
-    id 'com.android.library' version '7.4.2' apply false
-    id 'org.jetbrains.kotlin.android' version '1.6.21' apply false
+    id 'com.android.application' version '8.1.0' apply false
+    id 'com.android.library' version '8.1.0' apply false
+    id 'org.jetbrains.kotlin.android' version '1.9.0' apply false
+    id 'com.google.dagger.hilt.android' version '2.44.2' apply false
+    id 'com.google.devtools.ksp' version '1.9.0-1.0.13' apply false
 }
 
 task clean(type: Delete) {
