--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,11 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
-    id 'kotlin-kapt'
-    id 'kotlin-parcelize'
-    id 'com.google.devtools.ksp' version '1.8.10-1.0.9'
-    id 'dagger.hilt.android.plugin'
 
+    id 'kotlin-parcelize'
+    id 'com.google.devtools.ksp'
+    id 'dagger.hilt.android.plugin'
+    // id 'kotlin-kapt'
 
 }
 
@@ -58,7 +58,7 @@ android {
         compose true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion '1.4.4'
+        kotlinCompilerExtensionVersion '1.5.0'
     }
     packagingOptions {
         resources {
@@ -74,6 +74,7 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.10.1'
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
+    implementation "androidx.lifecycle:lifecycle-runtime-compose:2.6.0"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
     implementation 'androidx.activity:activity-compose:1.7.2'
     testImplementation 'junit:junit:4.13.2'
@@ -90,10 +91,11 @@ dependencies {
     implementation "io.coil-kt:coil-compose:2.2.2"
 
     // Dagger Hilt
-    implementation "com.google.dagger:hilt-android:2.44.2"
-    kapt "com.google.dagger:hilt-compiler:2.44.2"
+    implementation "com.google.dagger:hilt-android:2.48"
+    ksp "com.google.dagger:hilt-compiler:2.48"
+    // kapt "com.google.dagger:hilt-compiler:2.44.2"
     implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
-   kapt "org.jetbrains.kotlinx:kotlinx-metadata-jvm:0.5.0"
+
     // Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
@@ -132,5 +134,3 @@ dependencies {
 
 
 }
-
-
