--- a/build.gradle
+++ b/build.gradle
@@ -12,9 +12,9 @@ buildscript {
 plugins {
     id 'com.android.application' version '8.1.1' apply false
     id 'com.android.library' version '8.1.1' apply false
-    id 'org.jetbrains.kotlin.android' version '1.8.10' apply false
-    id 'com.google.dagger.hilt.android' version '2.44' apply false
-
+    id 'org.jetbrains.kotlin.android' version '1.9.0' apply false
+    id 'com.google.dagger.hilt.android' version '2.48' apply false
+    id 'com.google.devtools.ksp' version '1.9.0-1.0.13'apply false
 }
 
 tasks.register('clean', Delete) {
