--- a/app/build.gradle
+++ b/app/build.gradle
@@ -138,4 +138,6 @@ dependencies {
     implementation("com.google.maps.android:maps-compose:2.5.3")
     implementation("com.google.android.gms:play-services-maps:18.1.0")
 
+    implementation("com.github.JoelKanyi:KomposeCountryCodePicker:1.0.3")
+
 }
