--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,7 +15,7 @@ android {
         targetSdk =34
         versionCode  =1
         versionName ="1.0"
-
+        multiDexEnabled = true
         testInstrumentationRunner ="androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables {
             useSupportLibrary = true
@@ -91,7 +91,7 @@ dependencies {
     debugImplementation("androidx.compose.ui:ui-test-manifest:1.5.1")
 
     //Material 3
-    implementation("androidx.compose.material3:material3:1.1.1 ")
+    implementation("androidx.compose.material3:material3:1.2.0-alpha07")
 
     // Coil
     implementation("io.coil-kt:coil-compose:2.2.2")
@@ -140,4 +140,5 @@ dependencies {
 
     implementation("com.github.JoelKanyi:KomposeCountryCodePicker:1.0.3")
 
+    implementation("androidx.multidex:multidex:2.0.1")
 }
