--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,68 +77,68 @@ android {
 
 dependencies {
 
-    implementation("androidx.core:core-ktx:1.12.0")
-    implementation("androidx.compose.ui:ui:1.5.1")
-    implementation("androidx.compose.ui:ui-tooling-preview:1.5.1")
-    implementation("androidx.lifecycle:lifecycle-runtime-compose:2.6.2")
-    implementation("androidx.lifecycle:lifecycle-runtime-ktx:2.6.2")
-    implementation("androidx.activity:activity-compose:1.7.2")
-    testImplementation("junit:junit:4.13.2")
-    androidTestImplementation("androidx.test.ext:junit:1.1.5")
-    androidTestImplementation("androidx.test.espresso:espresso-core:3.5.1")
-    androidTestImplementation("androidx.compose.ui:ui-test-junit4:1.5.1")
-    debugImplementation("androidx.compose.ui:ui-tooling:1.5.1")
-    debugImplementation("androidx.compose.ui:ui-test-manifest:1.5.1")
+    implementation(libs.core.ktx)
+    implementation(libs.ui)
+    implementation(libs.ui.tooling.preview)
+    implementation(libs.lifecycle.runtime.compose)
+    implementation(libs.lifecycle.runtime.ktx)
+    implementation(libs.activity.compose)
+    testImplementation(libs.junit.junit)
+    androidTestImplementation(libs.androidx.test.ext.junit)
+    androidTestImplementation(libs.espresso.core)
+    androidTestImplementation(libs.ui.test.junit4)
+    debugImplementation(libs.ui.tooling)
+    debugImplementation(libs.ui.test.manifest)
 
     //Material 3
-    implementation("androidx.compose.material3:material3:1.2.0-alpha03")
+    implementation(libs.material3)
 
     // Coil
-    implementation("io.coil-kt:coil-compose:2.2.2")
+    implementation(libs.coil.compose)
 
     // Dagger Hilt
-    implementation("com.google.dagger:hilt-android:2.48")
-    ksp("com.google.dagger:hilt-compiler:2.48")
-    // kapt("com.google.dagger:hilt-compiler:2.44.2")
-    implementation("androidx.hilt:hilt-navigation-compose:1.0.0")
+    implementation(libs.hilt.android)
+    ksp(libs.hilt.compiler)
+    // kapt(libs.hilt.compiler)
+    implementation(libs.hilt.navigation.compose)
 
     // Retrofit
-    implementation("com.squareup.retrofit2:retrofit:2.9.0")
-    implementation("com.squareup.retrofit2:converter-moshi:2.9.0")
-    implementation("com.squareup.okhttp3:okhttp:5.0.0-alpha.7")
-    implementation("com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.7")
-    implementation("com.squareup.retrofit2:converter-scalars:2.9.0")
+    implementation(libs.retrofit)
+    implementation(libs.converter.moshi)
+    implementation(libs.okhttp)
+    implementation(libs.logging.interceptor)
+    implementation(libs.converter.scalars)
 
     //Moshi Library Dependencies - Core Moshi JSON Library and Moshi")s Kotlin support and converter factory
-    implementation("com.squareup.moshi:moshi:1.12.0")
-    implementation("com.squareup.moshi:moshi-kotlin:1.12.0")
+    implementation(libs.moshi)
+    implementation(libs.moshi.kotlin)
 
     // Room components
-    implementation("androidx.room:room-runtime:2.5.2")
-    ksp("androidx.room:room-compiler:2.5.2")
-    implementation("androidx.room:room-ktx:2.5.2")
+    implementation(libs.room.runtime)
+    ksp(libs.room.compiler)
+    implementation(libs.room.ktx)
 
     // Kotlin Extensions and Coroutines support for Room
-    implementation("androidx.room:room-ktx:2.5.2")
+    implementation(libs.room.ktx)
 
     //Timber
-    implementation("com.jakewharton.timber:timber:5.0.1")
+    implementation(libs.timber)
 
     //Flow Layout
-    implementation("com.google.accompanist:accompanist-flowlayout:0.24.9-beta")
+    implementation(libs.accompanist.flowlayout)
 
     //Lottie Animation
-    implementation("com.airbnb.android:lottie-compose:5.0.1")
+    implementation(libs.lottie.compose)
 
     // Compose Nav Destinations
-    implementation("io.github.raamcosta.compose-destinations:core:1.9.42-beta")
-    ksp("io.github.raamcosta.compose-destinations:ksp:1.9.42-beta")
+    implementation(libs.io.github.raamcosta.compose.destinations.core)
+    ksp(libs.ksp)
 
     //Maps Compose library
-    implementation("com.google.maps.android:maps-compose:2.5.3")
-    implementation("com.google.android.gms:play-services-maps:18.1.0")
+    implementation(libs.maps.compose)
+    implementation(libs.play.services.maps)
 
-    implementation("com.github.JoelKanyi:KomposeCountryCodePicker:1.0.3")
+    implementation(libs.komposecountrycodepicker)
 
-    implementation("androidx.multidex:multidex:2.0.1")
+    implementation(libs.multidex)
 }
