--- a/app/build.gradle
+++ b/app/build.gradle
@@ -147,5 +147,6 @@ dependencies {
 
     implementation(project(":core:ui"))
     implementation(project(":core:util"))
+    implementation(project(":feature:overview"))
 
 }
