--- a/app/build.gradle
+++ b/app/build.gradle
@@ -145,5 +145,6 @@ dependencies {
     implementation(project(":core:ui"))
     implementation(project(":core:util"))
     implementation(project(":feature:overview"))
+    implementation(project(":feature:details"))
 
 }
