Add :data:source: module

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -146,5 +146,6 @@ dependencies {
     implementation(project(":core:util"))
     implementation(project(":feature:overview"))
     implementation(project(":feature:details"))
+    implementation(project(":data:source"))
 
 }
