--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,17 +4,15 @@
 
 com-android-application = { id = "com.android.application", version = "8.1.1" }
 
-
 com-android-library = { id = "com.android.library", version = "8.1.1" }
 
-
 org-jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version = "1.9.10" }
-
 
 com-google-dagger-hilt-android = { id = "com.google.dagger.hilt.android", version = "2.48" }
 
 com-google-devtools-ksp = { id = "com.google.devtools.ksp", version = "1.9.10-1.0.13" }
 
+org-jetbrains-kotlin-plugin-parcelize = { id = "org.jetbrains.kotlin.plugin.parcelize", version = "1.9.10" }
 
 [versions]
 
@@ -23,48 +21,35 @@ kotlin = "1.9.10"
 
 androidx-room = "2.5.2"
 
-
 androidx-test-ext-junit = "1.1.5"
-
 
 androidx-test-espresso = "3.5.1"
 
-
 androidx-compose-ui = "1.5.1"
-
 
 androidx-core = "1.12.0"
 
 androidx-lifecycle = "2.6.2"
 
-
 androidx-activity = "1.7.2"
-
 
 androidx-compose-material3 = "1.2.0-alpha03"
 
-
 coil-kt = "2.2.2"
 
-
 androidx-hilt-navigation-compose = "1.0.0"
-
 
 retrofit2 = "2.9.0"
 
 okhttp3 = "5.0.0-alpha.7"
 
-
 moshi = "1.12.0"
-
 
 jakewharton-timber = "5.0.1"
 
-google-accompanist = "0.24.9-beta"
-
+google-accompanist = "0.31.2-alpha"
 
 google-android-maps-compose = "2.5.3"
-
 
 google-android-play-services-maps = "18.1.0"
 
@@ -76,6 +61,8 @@ androidx-compose-compiler = "1.5.3"
 appcompat = "1.6.1"
 material = "1.9.0"
 
+androidx-compose-animation = "1.4.3"
+
 [libraries]
 
 room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "androidx-room" }
@@ -83,7 +70,6 @@ room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "
 room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "androidx-room" }
 
 room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "androidx-room" }
-
 
 kotlin-parcelize-runtime = { group = "org.jetbrains.kotlin", name = "kotlin-parcelize-runtime", version.ref = "kotlin" }
 material3 = { group = "androidx.compose.material3", name = "material3", version.ref = "androidx-compose-material3" }
@@ -99,26 +85,23 @@ compose-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling
 
 compose-maps = { group = "com.google.maps.android", name = "maps-compose", version.ref = "google-android-maps-compose" }
 
+compose-animation = { group = "androidx.compose.animation", name = "animation", version.ref = "androidx-compose-animation" }
+
 compose-coil = { group = "io.coil-kt", name = "coil-compose", version.ref = "coil-kt" }
 
 compose-destinations-core = "io.github.raamcosta.compose-destinations:core:1.9.42-beta"
 
 compose-destinations-ksp = "io.github.raamcosta.compose-destinations:ksp:1.9.42-beta"
 
-
 hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref = "google-dagger" }
 hilt-compiler = { group = "com.google.dagger", name = "hilt-compiler", version.ref = "google-dagger" }
 hilt-navigation-compose = { group = "androidx.hilt", name = "hilt-navigation-compose", version.ref = "androidx-hilt-navigation-compose" }
-
-
 
 ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest", version.ref = "androidx-compose-ui" }
 
 core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "androidx-core" }
 
 lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "androidx-lifecycle" }
-
-
 
 retrofit = { group = "com.squareup.retrofit2", name = "retrofit", version.ref = "retrofit2" }
 
@@ -133,8 +116,6 @@ converter-scalars = { group = "com.squareup.retrofit2", name = "converter-scalar
 moshi = { group = "com.squareup.moshi", name = "moshi", version.ref = "moshi" }
 
 moshi-kotlin = { group = "com.squareup.moshi", name = "moshi-kotlin", version.ref = "moshi" }
-
-
 
 timber = { group = "com.jakewharton.timber", name = "timber", version.ref = "jakewharton-timber" }
 
@@ -154,11 +135,9 @@ kotlin-parcelize-compiler = { group = "org.jetbrains.kotlin", name = "kotlin-par
 
 symbol-processing = "com.google.devtools.ksp:symbol-processing:1.9.10-1.0.13"
 
-
 symbol-processing-api = "com.google.devtools.ksp:symbol-processing-api:1.9.10-1.0.13"
 
 symbol-processing-cmdline = "com.google.devtools.ksp:symbol-processing-cmdline:1.9.10-1.0.13"
-
 
 appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
@@ -168,3 +147,25 @@ androidx-test-ext-junit = { group = "androidx.test.ext", name = "junit", version
 espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "androidx-test-espresso" }
 
 ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4", version.ref = "androidx-compose-ui" }
+
+io-github-raamcosta-compose-destinations-core = "io.github.raamcosta.compose-destinations:core:1.9.42-beta"
+
+ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling", version.ref = "androidx-compose-ui" }
+
+ui = { group = "androidx.compose.ui", name = "ui", version.ref = "androidx-compose-ui" }
+
+ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview", version.ref = "androidx-compose-ui" }
+
+lifecycle-runtime-compose = { group = "androidx.lifecycle", name = "lifecycle-runtime-compose", version.ref = "androidx-lifecycle" }
+
+activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "androidx-activity" }
+
+coil-compose = { group = "io.coil-kt", name = "coil-compose", version.ref = "coil-kt" }
+
+
+
+accompanist-nav-animation = { group = "com.google.accompanist", name = "accompanist-navigation-animation", version.ref = "google-accompanist" }
+
+maps-compose = { group = "com.google.maps.android", name = "maps-compose", version.ref = "google-android-maps-compose" }
+
+ksp = "io.github.raamcosta.compose-destinations:ksp:1.9.42-beta"
