--- a/versions.properties
+++ b/versions.properties
@@ -6,3 +6,69 @@
 ####
 #### suppress inspection "SpellCheckingInspection" for whole file
 #### suppress inspection "UnusedProperty" for whole file
+
+
+
+version.retrofit2=2.9.0
+
+version.okhttp3=5.0.0-alpha.7
+
+version.moshi=1.12.0
+
+version.kotlin=1.9.10
+
+version.junit.junit=4.13.2
+
+version.jakewharton.timber=5.0.1
+
+version.io.github.raamcosta.compose-destinations..ksp=1.9.42-beta
+
+version.io.github.raamcosta.compose-destinations..core=1.9.42-beta
+
+version.google.dagger=2.48
+
+version.google.android.play-services-maps=18.1.0
+
+version.google.android.maps-compose=2.5.3
+
+version.google.accompanist=0.31.2-alpha
+
+version.com.google.devtools.ksp..symbol-processing-cmdline=1.9.10-1.0.13
+
+version.com.google.devtools.ksp..symbol-processing-api=1.9.10-1.0.13
+
+version.com.google.devtools.ksp..symbol-processing=1.9.10-1.0.13
+
+version.com.github.JoelKanyi..KomposeCountryCodePicker=1.0.3
+
+version.com.airbnb.android..lottie-compose=5.0.1
+
+version.coil-kt=2.2.2
+
+version.androidx.test.ext.junit=1.1.5
+
+version.androidx.test.espresso=3.5.1
+
+version.androidx.room=2.5.2
+
+version.androidx.lifecycle=2.6.2
+
+version.androidx.hilt-navigation-compose=1.0.0
+
+version.androidx.core=1.12.0
+
+version.androidx.compose.ui=1.5.1
+
+version.androidx.compose.material3=1.2.0-alpha03
+
+version.androidx.compose.compiler=1.5.3
+
+version.androidx.compose.animation=1.4.3
+
+version.androidx.activity=1.7.2
+
+plugin.com.google.devtools.ksp=1.9.10-1.0.13
+
+plugin.com.google.dagger.hilt.android=2.48
+
+plugin.android=8.1.1
