Configure Feature Modules with KSP

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -151,6 +151,8 @@ dependencies {
     implementation(project(":core:util"))
     implementation(project(":feature:overview"))
     implementation(project(":feature:details"))
+    implementation(project(":feature:validator"))
     implementation(project(":data:source"))
+
 
 }
