--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -89,9 +89,9 @@ compose-animation = { group = "androidx.compose.animation", name = "animation", 
 
 compose-coil = { group = "io.coil-kt", name = "coil-compose", version.ref = "coil-kt" }
 
-compose-destinations-core = "io.github.raamcosta.compose-destinations:core:1.9.42-beta"
+compose-destinations-core = "io.github.raamcosta.compose-destinations:animations-core:1.9.53"
 
-compose-destinations-ksp = "io.github.raamcosta.compose-destinations:ksp:1.9.42-beta"
+compose-destinations-ksp = "io.github.raamcosta.compose-destinations:ksp:1.9.53"
 
 hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref = "google-dagger" }
 hilt-compiler = { group = "com.google.dagger", name = "hilt-compiler", version.ref = "google-dagger" }
