--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -62,6 +62,7 @@ appcompat = "1.6.1"
 
 
 androidx-compose-animation = "1.4.3"
+material = "1.9.0"
 
 [libraries]
 
@@ -146,6 +147,7 @@ appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "a
 accompanist-nav-animation = { group = "com.google.accompanist", name = "accompanist-navigation-animation", version.ref = "google-accompanist" }
 
 espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "androidx-test-espresso" }
+material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 
 ## THE END
 
