--- a/versions.properties
+++ b/versions.properties
@@ -7,7 +7,7 @@
 #### suppress inspection "SpellCheckingInspection" for whole file
 #### suppress inspection "UnusedProperty" for whole file
 
-
+version.androidx.navigation=2.7.5
 
 version.retrofit2=2.9.0
 
