--- a/.github/workflows/publishing_workflow.yaml
+++ b/.github/workflows/publishing_workflow.yaml
@@ -1,69 +1,56 @@
 name: Deploy Countries Pad
-
 on:
-   workflow_dispatch:
-
+   workflow_dispatch: null
 jobs:
-   
    build:
       runs-on: ubuntu-latest
       steps:
          - name: Decode Keystore
            env:
               ENCODED_STRING: ${{ secrets.KEYSTORE }}
-              run: |
+              run: >
                  TMP_KEYSTORE_FILE_PATH="${RUNNER_TEMP}"/keystore
+               
                  mkdir "${TMP_KEYSTORE_FILE_PATH}"
+               
                  echo $ENCODED_STRING | base64 -di > "${TMP_KEYSTORE_FILE_PATH}"/your_keystore_file.jks
-                 
          - uses: actions/checkout@v3
-         
          - name: Setup JDK 17
            uses: actions/setup-java@v3
            with:
               distribution: temurin
               java-version: 17
-              
          - name: Make gradlew executable
            run: chmod +x ./gradlew
-      
          - name: Setup Gradle Cache
            uses: gradle/gradle-build-action@v2
            with:
               gradle-home-cache-cleanup: true
-              
-              
          - name: Bump Version Code
            uses: chkfung/android-version-actions@v1.1
            with:
               gradlePath: app/build.gradle
               versionCode: ${{ github.run_number }}
-              
-              
          - name: Build prodRelease
            run: ./gradlew app:bundleProdRelease
            env:
               SIGNING_KEY_ALIAS: ${{ secrets.SIGNING_KEY_ALIAS }}
               SIGNING_KEY_PASSWORD: ${{ secrets.SIGNING_KEY_PASSWORD }}
               SIGNING_STORE_PASSWORD: ${{ secrets.SIGNING_STORE_PASSWORD }}
-              
          - name: Upload app bundle as artifact
            uses: actions/upload-artifact@v2
            with:
               name: app-bundle
               path: app/build/outputs/bundle/prodRelease/app-prod-release.aab
-              
    deploy:
       needs: build
       runs-on: ubuntu-latest
       steps:
          - uses: actions/checkout@v3
-         
          - name: Download app bundle from artifact
            uses: actions/download-artifact@v2
            with:
               name: app-bundle
-              
          - name: Publish to Play Store
            uses: r0adkll/upload-google-play@v1
            with:
