--- a/.github/workflows/publishing_workflow.yaml
+++ b/.github/workflows/publishing_workflow.yaml
@@ -1,6 +1,7 @@
 name: Deploy Countries Pad
 on:
-   workflow_dispatch: null
+   workflow_dispatch:
+
 jobs:
    build:
       runs-on: ubuntu-latest
@@ -8,12 +9,12 @@ jobs:
          - name: Decode Keystore
            env:
               ENCODED_STRING: ${{ secrets.KEYSTORE }}
-              run: >
-                 TMP_KEYSTORE_FILE_PATH="${RUNNER_TEMP}"/keystore
-               
-                 mkdir "${TMP_KEYSTORE_FILE_PATH}"
-               
-                 echo $ENCODED_STRING | base64 -di > "${TMP_KEYSTORE_FILE_PATH}"/your_keystore_file.jks
+           run: >
+              TMP_KEYSTORE_FILE_PATH="${RUNNER_TEMP}"/keystore
+            
+              mkdir "${TMP_KEYSTORE_FILE_PATH}"
+            
+              echo $ENCODED_STRING | base64 -di > "${TMP_KEYSTORE_FILE_PATH}"/your_keystore_file.jks
          - uses: actions/checkout@v3
          - name: Setup JDK 17
            uses: actions/setup-java@v3
@@ -42,6 +43,7 @@ jobs:
            with:
               name: app-bundle
               path: app/build/outputs/bundle/prodRelease/app-prod-release.aab
+   
    deploy:
       needs: build
       runs-on: ubuntu-latest
