--- a/.github/workflows/publishing_workflow.yaml
+++ b/.github/workflows/publishing_workflow.yaml
@@ -28,10 +28,11 @@ jobs:
            with:
               gradle-home-cache-cleanup: true
          - name: Bump Version Code
-           uses: chkfung/android-version-actions@v1.1
+           uses: chkfung/android-version-actions@v1.2.1
            with:
-              gradlePath: app/build.gradle
+              gradlePath: app/build.gradle.kts
               versionCode: ${{ github.run_number }}
+              versionName: 1.0.0
          - name: Build prodRelease
            run: ./gradlew app:bundleProdRelease
            env:
