--- a/.github/workflows/publishing_workflow.yaml
+++ b/.github/workflows/publishing_workflow.yaml
@@ -44,7 +44,7 @@ jobs:
            uses: actions/upload-artifact@v2
            with:
               name: app-bundle
-              path: app/build/outputs/bundle/prodRelease/app-prod-release.aab
+              path: app/build/outputs/bundle/release/app-release.aab
    
    deploy:
       needs: build
@@ -55,10 +55,11 @@ jobs:
            uses: actions/download-artifact@v2
            with:
               name: app-bundle
+              
          - name: Publish to Play Store
            uses: r0adkll/upload-google-play@v1
            with:
               serviceAccountJsonPlainText: ${{ secrets.SERVICE_ACCOUNT_JSON }}
               packageName: com.uxstate
-              releaseFiles: app-prod-release.aab
+              releaseFiles: app-release.aab
               track: production
