Update signing job

--- a/.github/workflows/publishing_workflow.yaml
+++ b/.github/workflows/publishing_workflow.yaml
@@ -33,13 +33,23 @@ jobs:
               gradlePath: app/build.gradle.kts
               versionCode: ${{ github.run_number }}
               versionName: 1.0.0
-         - name: Build prodRelease
-           run: ./gradlew bundleRelease --stacktrace
-           env:
-              SIGNING_KEY_ALIAS: ${{ secrets.SIGNING_KEY_ALIAS }}
-              SIGNING_KEY_PASSWORD: ${{ secrets.SIGNING_KEY_PASSWORD }}
-              SIGNING_STORE_PASSWORD: ${{ secrets.SIGNING_STORE_PASSWORD }}
-              
+#         - name: Build prodRelease
+#           run: ./gradlew bundleRelease --stacktrace
+#           env:
+#              SIGNING_KEY_ALIAS: ${{ secrets.SIGNING_KEY_ALIAS }}
+#              SIGNING_KEY_PASSWORD: ${{ secrets.SIGNING_KEY_PASSWORD }}
+#              SIGNING_STORE_PASSWORD: ${{ secrets.SIGNING_STORE_PASSWORD }}
+         - name: Sign AAB
+           id: sign
+           uses: r0adkll/sign-android-release@v1
+           with:
+              releaseDirectory: app/build/outputs/bundle/release
+              signingKeyBase64: ${{ secrets.KEYSTORE }}
+              alias: ${{ secrets.SIGNING_KEY_ALIAS }}
+              keyStorePassword: ${{ secrets.SIGNING_STORE_PASSWORD }}
+              keyPassword: ${{ secrets.SIGNING_KEY_PASSWORD }}
+           
+           
          - name: Upload app bundle as artifact
            uses: actions/upload-artifact@v2
            with:
