--- a/.github/workflows/publishing_workflow.yaml
+++ b/.github/workflows/publishing_workflow.yaml
@@ -40,7 +40,7 @@ jobs:
               versionName: 1.0.0
               
          - name: Build prodRelease
-           run: ./gradlew app:bundleRelease
+           run: ./gradlew bundleRelease
            env:
               SIGNING_KEY_ALIAS: ${{ secrets.SIGNING_KEY_ALIAS }}
               SIGNING_KEY_PASSWORD: ${{ secrets.SIGNING_KEY_PASSWORD }}
