--- a/.github/workflows/publishing_workflow.yaml
+++ b/.github/workflows/publishing_workflow.yaml
@@ -70,7 +70,7 @@ jobs:
            with:
               serviceAccountJsonPlainText: ${{ secrets.SERVICE_ACCOUNT_JSON }}
               packageName: com.uxstate
-              releaseFiles: app-release.aab
+              releaseFiles: ${{ github.workspace }}/app-release.aab
               track: production
               
               
