--- a/.github/workflows/publishing_workflow.yaml
+++ b/.github/workflows/publishing_workflow.yaml
@@ -40,16 +40,17 @@ jobs:
               versionName: 1.0.0
               
          - name: Build prodRelease
-           run: ./gradlew :app:assembleRelease -x test
-#           run: ./gradlew bundleRelease
-         
-         - name: Verify Signature
-           run: $ANDROID_SDK_ROOT/build-tools/33.0.1/apksigner verify --print-certs app/build/outputs/bundle/release/app-release.aab
+           
+           run: ./gradlew bundleRelease
+#           run: ./gradlew :app:assembleRelease -x test
            env:
               SIGNING_KEY_ALIAS: ${{ secrets.SIGNING_KEY_ALIAS }}
               SIGNING_KEY_PASSWORD: ${{ secrets.SIGNING_KEY_PASSWORD }}
               SIGNING_STORE_PASSWORD: ${{ secrets.SIGNING_STORE_PASSWORD }}
-              
+         
+         -  name: Verify Signature
+            run: $ANDROID_SDK_ROOT/build-tools/33.0.1/apksigner verify --print-certs app\build\outputs\bundle\release\app-release.aab
+            
          -  name: Upload app bundle as artifact
             uses: actions/upload-artifact@v2
             with:
