--- a/.github/workflows/publishing_workflow.yaml
+++ b/.github/workflows/publishing_workflow.yaml
@@ -48,8 +48,11 @@ jobs:
               SIGNING_KEY_PASSWORD: ${{ secrets.SIGNING_KEY_PASSWORD }}
               SIGNING_STORE_PASSWORD: ${{ secrets.SIGNING_STORE_PASSWORD }}
          
+         -  name: Check AAB Existence
+            run: ls -l app/build/outputs/bundle/release/
+            
          -  name: Verify Signature
-            run: $ANDROID_SDK_ROOT/build-tools/33.0.1/apksigner verify --print-certs app/build/outputs/bundle/release/app-release.aab
+            run: $ANDROID_SDK_ROOT/build-tools/33.0.1/apksigner verify --print-certs --verbose app/build/outputs/bundle/release/app-release.aab
             
          -  name: Upload app bundle as artifact
             uses: actions/upload-artifact@v2
