Comment on Verify Signature Step

--- a/.github/workflows/publishing_workflow.yaml
+++ b/.github/workflows/publishing_workflow.yaml
@@ -54,8 +54,8 @@ jobs:
          - name: Extract the contents of the AAB
            run: unzip -l app/build/outputs/bundle/release/app-release.aab
          
-         -  name: Verify Signature
-            run: $ANDROID_SDK_ROOT/build-tools/33.0.1/apksigner verify --print-certs --verbose app/build/outputs/bundle/release/app-release.aab
+#         -  name: Verify Signature
+#            run: $ANDROID_SDK_ROOT/build-tools/33.0.1/apksigner verify --print-certs --verbose app/build/outputs/bundle/release/app-release.aab
             
          -  name: Upload app bundle as artifact
             uses: actions/upload-artifact@v2
