--- a/.github/workflows/publishing_workflow.yaml
+++ b/.github/workflows/publishing_workflow.yaml
@@ -41,8 +41,8 @@ jobs:
               
          - name: Build prodRelease
            
-#          run: ./gradlew bundleRelease
-           run: ./gradlew :app:assembleRelease -x test
+           run: ./gradlew bundleRelease
+#           run: ./gradlew :app:assembleRelease -x test
            env:
               SIGNING_KEY_ALIAS: ${{ secrets.SIGNING_KEY_ALIAS }}
               SIGNING_KEY_PASSWORD: ${{ secrets.SIGNING_KEY_PASSWORD }}
