--- a/.github/workflows/publishing_workflow.yaml
+++ b/.github/workflows/publishing_workflow.yaml
@@ -55,7 +55,7 @@ jobs:
            run: unzip -l app/build/outputs/bundle/release/app-release.aab
          
          -  name: Verify Signature
-            run: $ANDROID_SDK_ROOT/build-tools/34.0.0/apksigner verify --print-certs --verbose app/build/outputs/bundle/release/app-release.aab
+            run: bundletool validate --bundle= app/build/outputs/bundle/release/app-release.aab
          
          
          -  name: Upload app bundle as artifact
