--- a/.github/workflows/publishing_workflow.yaml
+++ b/.github/workflows/publishing_workflow.yaml
@@ -54,9 +54,15 @@ jobs:
          - name: Extract the contents of the AAB
            run: unzip -l app/build/outputs/bundle/release/app-release.aab
          
-         -  name: Verify Signature
-            run: bundletool validate --bundle= app/build/outputs/bundle/release/app-release.aab
-         
+#         -  name: Verify Signature
+#            run: bundletool validate --bundle= app/build/outputs/bundle/release/app-release.aab
+         - name: Download bundletool
+           run: >
+                  wget https://github.com/google/bundletool/releases/download/1.10.0/bundletool-all-1.10.0.jar -O bundletool.jar
+                  chmod +x bundletool.jar
+                  
+         -  name: Verify AAB Signing
+            run: java -jar bundletool.jar validate --bundle=app/build/outputs/bundle/release/app-release.aab
          
          -  name: Upload app bundle as artifact
             uses: actions/upload-artifact@v2
