--- a/.github/workflows/publishing_workflow.yaml
+++ b/.github/workflows/publishing_workflow.yaml
@@ -80,7 +80,7 @@ jobs:
            uses: r0adkll/upload-google-play@v1
            with:
               serviceAccountJsonPlainText: ${{ secrets.SERVICE_ACCOUNT_JSON }}
-              packageName: com.uxstate
+              packageName: com.uxstate.countriespad
               releaseFiles: ${{ github.workspace }}/app-release.aab
               track: production
               
