Add Echo Build Status Step

--- a/.github/workflows/publishing_workflow.yaml
+++ b/.github/workflows/publishing_workflow.yaml
@@ -56,7 +56,8 @@ jobs:
               alias: ${{ secrets.SIGNING_KEY_ALIAS }}
               keyStorePassword: ${{ secrets.SIGNING_STORE_PASSWORD }}
               keyPassword: ${{ secrets.SIGNING_KEY_PASSWORD }}
-           
+              
+         - run: echo "Build status report=${{ job.status }}."
          -  name: Upload app bundle as artifact
             uses: actions/upload-artifact@v2
             with:
